--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,19 @@
 h1{
     margin-top: 3%;
-    margin-left: 5%;
+    margin-left: 3%;
+    font-size: 1.8em;
+}
+
+h2{
+    font-size: 1em;
+}
+
+h3 {
+    font-size: 0.9em;
+}
+
+h4{
+    font-size: 0.8em;
 }
 
 .overlay {
@@ -24,9 +37,46 @@ h1{
     text-align: center;
  }
 
- .btnClose {
+.btnClose {
     float: right;
     font-size:16pt;
     cursor: pointer;
     color: white;
     }
+
+#tableauPanier {
+    border: solid 1px black;
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+
+th, td, tr {
+    font-size: 0.7em;
+}
+
+
+
+@media (min-width: 576px) { 
+    h1 {
+        font-size: 2em;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.4em;
+    }
+
+    h4{
+        font-size: 1.3em;
+    }
+    
+    th, td, tr {
+        font-size: 1em;
+    }
+
+}
+    
+
